IDE-1851 : next Resource API development iteration. Added collide tree ui component.